@startuml diagrama
class Bot {
  logger
  jda
  moduleManager
  start()
}
class Main {
  main()
}
Main ..> Bot
class ModuleManager {
  modules
  registerModule()
  enableModule()
  disableModule()
  isModuleEnabled()
  getModules()
}
class CommandManager {
  commands
  getSlash()
  onSlashCommandInteraction()
}
CommandManager --|> EventListener
class ManageCommands {
}
ManageCommands --|> CommandManager
class ModCommands {
}
ModCommands --|> CommandManager
class UserCommands {
}
UserCommands --|> CommandManager
class CreateRole {
  name
  execute()
  getSlash()
  getName()
}
CreateRole ..|> ICommand
class DeleteRole {
  name
  execute()
  getSlash()
  getName()
}
DeleteRole ..|> ICommand
class Ban {
  name
  execute()
  getSlash()
  parseTime()
  getName()
}
Ban ..|> ICommand
class Kick {
  name
  execute()
  getSlash()
  getName()
}
Kick ..|> ICommand
class Mute {
  name
  execute()
  getSlash()
  parseTime()
  getName()
}
Mute ..|> ICommand
class Avatar {
  name
  execute()
  buildAvatarEmbed()
  buildBannerEmbed()
  getSlash()
  getName()
}
Avatar ..|> ICommand
class DatabaseManager {
  url
  user
  password
  connection
  connect()
  addPenalty()
  getPenalties()
  close()
}
class EventListener {
  isCommandEnabled
  onMessageReceived()
  onMessageReactionAdd()
  setCommandEnabled()
  isCommandEnabled()
}
EventListener --|> ListenerAdapter
class GuiManager {
  initializeGui()
  updateGui()
}
class Utils {
  isValidUserId()
  formatPenaltyMessage()
  formatDuration()
}
@enduml
